Another attempt at fixing the lag caused by METAcraft-Zones.
- Removed the lock from CombinedZone and use lock free atomic variable instead (apparently this was missed last time).
- Don't remove the ThreadLocal variable in the CombinedZone loop, simply set it to false. It will be used again soon either way.
- Fixed a null pointer exception.