@@ -6,15 +6,16 @@ import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.server.command.ServerCommandSource;
 import net.minecraft.util.math.BlockPos;
-import se.datasektionen.mc.zones.util.LockHelper;
+import org.apache.commons.lang3.mutable.MutableObject;
+import org.pcollections.PVector;
+import org.pcollections.TreePVector;
 import se.datasektionen.mc.zones.util.ZoneCommandUtils;
 import se.datasektionen.mc.zones.ZoneManagementCommand;
 import se.datasektionen.mc.zones.zone.Zone;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.locks.ReadWriteLock;
-import java.util.concurrent.locks.ReentrantReadWriteLock;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -22,14 +23,12 @@ import java.util.stream.Collectors;
 public abstract class CombinedZone extends ZoneType {
 
 
-	protected final List<ZoneType> zones;
-	protected double size;
-
-	protected final ReadWriteLock lock = new ReentrantReadWriteLock();
+	protected AtomicReference<PVector<ZoneType>> zones;
+	protected volatile double size;
 
 	public static <T extends CombinedZone> MapCodec<T> getCodec(Function<List<ZoneType>, T> creator) {
 		return RecordCodecBuilder.mapCodec(instance -> instance.group(
-				REGISTRY_CODEC.listOf().fieldOf("zones").forGetter(zone -> zone.zones)
+				REGISTRY_CODEC.listOf().fieldOf("zones").forGetter(zone -> zone.zones.get())
 		).apply(instance, creator));
 	}
 
@@ -58,11 +57,16 @@ public abstract class CombinedZone extends ZoneType {
 	}
 
 	public CombinedZone(List<ZoneType> zones) {
-		this.zones = new ArrayList<>(zones);
+		this.zones = new AtomicReference<>(
+				TreePVector.from(zones)
+		);
 		if (zones.isEmpty()) {
 			throw new IllegalArgumentException("Don't create an empty combined zone!");
 		}
-		this.setZoneRef(zones.get(0).getZoneRef());
+		var ref = zones.getFirst().getZoneRef();
+		if (ref != null) {
+			this.setZoneRef(ref);
+		}
 	}
 
 	protected abstract double getSize(Iterable<ZoneType> zones);
@@ -70,65 +74,52 @@ public abstract class CombinedZone extends ZoneType {
 
 	@Override
 	public boolean contains(BlockPos pos) {
-		return LockHelper.getThroughLock(lock.readLock(), () -> combinedZoneContains(pos));
+		return combinedZoneContains(pos);
 	}
 
 	public abstract boolean combinedZoneContains(BlockPos pos);
 
 	public void addZone(ZoneType zone) {
-		lock.writeLock().lock();
-		try {
-			zones.add(zone);
-			zone.setZoneRef(getZoneRef());
-			size = updateSize(zone, UpdateDirection.ADD);
-		} finally {
-			lock.writeLock().unlock();
-		}
+		zones.getAndUpdate(
+				z -> z.plus(zone)
+		);
+		zone.setZoneRef(getZoneRef());
+		size = updateSize(zone, UpdateDirection.ADD);
 	}
 
 	public ZoneType removeZone(int index) {
-		lock.writeLock().lock();
-		ZoneType element;
-		try {
-			element = zones.remove(index);
-			size = updateSize(element, UpdateDirection.REMOVE);
-		} finally {
-			lock.writeLock().unlock();
-		}
-		return element;
+		MutableObject<ZoneType> zone = new MutableObject<>();
+		zones.getAndUpdate(
+				z -> {
+					zone.setValue(z.get(index));
+					return z.minus(index);
+				}
+		);
+
+		size = updateSize(zone.getValue(), UpdateDirection.REMOVE);
+
+		return zone.getValue();
 	}
 
 	public void forEach(Consumer<ZoneType> consumer) {
-		lock.readLock().lock();
-		try {
-			zones.forEach(consumer);
-		} finally {
-			lock.readLock().unlock();
-		}
+		zones.get().forEach(consumer);
 	}
 
 	public int zoneCount() {
-		return zones.size();
+		return zones.get().size();
 	}
 
 	public ZoneType getZone(int index) {
-		return zones.get(index);
+		return zones.get().get(index);
 	}
 
 	@Override
 	public void setZoneRef(Zone zone) {
 		super.setZoneRef(zone);
-		if (zone != null) {
-			lock.readLock().lock();
-			try {
-				for (ZoneType type : zones) {
-					type.setZoneRef(zone);
-				}
-				size = getSize(zones);
-			} finally {
-				lock.readLock().unlock();
-			}
+		for (ZoneType type : zones.get()) {
+			type.setZoneRef(zone);
 		}
+		size = getSize(zones.get());
 	}
 
 	@Override
@@ -138,20 +129,14 @@ public abstract class CombinedZone extends ZoneType {
 
 	@Override
 	public ZoneType copy() {
-		return LockHelper.getThroughLock(
-				lock.readLock(),
-				() -> copy(zones.stream().map(ZoneType::copy).collect(Collectors.toList()))
-		);
+		return copy(zones.get().stream().map(ZoneType::copy).collect(Collectors.toList()));
 	}
 
 	@Override
 	public String toString() {
-		return LockHelper.getThroughLock(
-				lock.readLock(),
-				() ->getClass().getSimpleName().replace("Zone", "") + "[" + zones.stream().map(
-						ZoneType::toString
-				).collect(Collectors.joining(", ")) + "]"
-		);
+		return getClass().getSimpleName().replace("Zone", "") + "[" + zones.get().stream().map(
+				ZoneType::toString
+		).collect(Collectors.joining(", ")) + "]";
 	}
 
 	protected abstract ZoneType copy(List<ZoneType> newZones);
